feat: implement GhiDanh NPC, admin dhvt commands, and refine match end logic