@@ -1,25 +1,33 @@
 package models.TreasureUnderSea;
 
-import DucPro.Functions;
+/*
+ *
+ *
+ *  Box ZALO:https://zalo.me/g/ifjict764
+ *  sdt zalo: 0358176187
+ * Chuyên chỉnh sữa mua bán source nro,...
+ */
+
+import utils.Functions;
 import boss.Boss;
 import boss.boss_manifest.TreasureUnderSea.TrungUyXanhLo;
 import clan.Clan;
 import map.TrapMap;
 import map.Zone;
 import mob.Mob;
-import player.Player;
-import services.ItemTimeService;
-import services.MapService;
-import services.Service;
+import nro.player.Player;
+import nro.services.ItemTimeService;
+import nro.services.MapService;
+import nro.services.Service;
 import services.func.ChangeMapService;
 import utils.Util;
 
 import java.util.ArrayList;
 import java.util.List;
 import lombok.Data;
-import server.Maintenance;
-import services.ClanService;
-import services.ItemMapService;
+import nro.server.Maintenance;
+import nro.services.ClanService;
+import nro.services.ItemMapService;
 import utils.TimeUtil;
 
 @Data
@@ -70,8 +78,7 @@ public class TreasureUnderSea implements Runnable {
 
     public void update() {
         if (isOpened) {
-            if (Util.canDoWithTime(lastTimeOpen, TIME_BAN_DO_KHO_BAU)
-                    || (kickoutbdkb && Util.canDoWithTime(timeKickOutBDKB, 60000))) {
+            if (Util.canDoWithTime(lastTimeOpen, TIME_BAN_DO_KHO_BAU) || (kickoutbdkb && Util.canDoWithTime(timeKickOutBDKB, 60000))) {
                 finish();
                 dispose();
             }
@@ -81,6 +88,7 @@ public class TreasureUnderSea implements Runnable {
 
                 if (zone.map.mapId == 135) {
                     for (Player pl : zone.getNotBosses()) {
+                        sendThanhTichKhoBau(pl);
                         if (pl != null) {
                             TrapMap trap = zone.isInTrap(pl);
                             if (trap != null) {
@@ -116,14 +124,35 @@ public class TreasureUnderSea implements Runnable {
                 for (Zone zone : zones) {
                     List<Player> players = zone.getPlayers();
                     for (Player pl : players) {
-                        Service.gI().sendThongBao(pl, "Cái hang này sắp sập rồi, chúng ta phải rời khỏi đây ngay "
-                                + TimeUtil.getTimeLeft(timeKickOutBDKB, 60) + " nữa");
+                        Service.gI().sendThongBao(pl, "Cái hang này sắp sập rồi, chúng ta phải rời khỏi đây ngay " + TimeUtil.getTimeLeft(timeKickOutBDKB, 60) + " nữa");
                     }
                     lastTimeSendNotify = System.currentTimeMillis();
                 }
             }
 
         }
+    }
+
+    public void sendThanhTichKhoBau(Player pl) {
+        if (pl == null || pl.clan == null || pl.clan.BanDoKhoBau == null) {
+            return;
+        }
+
+        long timeDoneKhoBau;
+        timeDoneKhoBau = System.currentTimeMillis() - pl.clan.lastTimeOpenBanDoKhoBau;
+        int levelDoneKG;
+        levelDoneKG = pl.clan.BanDoKhoBau.level;
+        if (levelDoneKG > pl.clan.levelDoneBanDoKhoBau) {
+            pl.clan.levelDoneBanDoKhoBau = levelDoneKG;
+            pl.clan.thoiGianHoanThanhBDKB = timeDoneKhoBau;
+        } else if (levelDoneKG == pl.clan.levelDoneBanDoKhoBau) {
+            if (timeDoneKhoBau < pl.clan.thoiGianHoanThanhBDKB) {
+                pl.clan.thoiGianHoanThanhBDKB = timeDoneKhoBau;
+            }
+        }
+        pl.clan.updatethanhTichBDKB(pl.clan.id);
+        pl.clan.updatethanhTichBDKBForLeader();
+        pl.clan.updateThongTinLeader3(pl.clan.id);
     }
 
     public void openBanDoKhoBau(Player plOpen, Clan clan, byte level) {
@@ -147,57 +176,54 @@ public class TreasureUnderSea implements Runnable {
     }
 
     private void init() {
-        // Hồi sinh quái
         for (Zone zone : this.zones) {
+
+            // Gán dame cho trap
             for (TrapMap trap : zone.trapMaps) {
-                trap.dame = this.level * 100000;
+                trap.dame = this.level * 100_000;
             }
 
-            if (zone.map.mapId == 135 || zone.map.mapId == 136 || zone.map.mapId == 137) {
-                List<Mob> mobs = zone.mobs;
-                for (int i = 0; i < mobs.size(); i++) {
-                    Mob mob = mobs.get(i);
-                    if (((i == 5 || i == 10) && zone.map.mapId == 135) || (i == 5 && zone.map.mapId == 136)
-                            || (i == 5 && zone.map.mapId == 137)) {
-                        mob.lvMob = 1;
-                        mob.point.dame = Util.toIntOrLong(level * 31 * 50 * mob.tempId * 10);
-                        mob.point.maxHp = Util.toIntOrLong(level * 3107 * 50 * mob.tempId * 10);
-                        mob.hoiSinh();
-                        mob.hoiSinhMobPhoBan();
-                    } else {
-                        mob.lvMob = 0;
-                        mob.point.dame = Util.toIntOrLong(level * 31 * 50 * mob.tempId);
-                        mob.point.maxHp = Util.toIntOrLong(level * 3107 * 50 * mob.tempId);
-                        mob.hoiSinh();
-                        mob.hoiSinhMobPhoBan();
-                    }
+            // Xử lý mob
+            for (int i = 0; i < zone.mobs.size(); i++) {
+                Mob mob = zone.mobs.get(i);
+                boolean isSpecial
+                        = (zone.map.mapId == 135 && (i == 5 || i == 10))
+                        || (zone.map.mapId == 136 && i == 5)
+                        || (zone.map.mapId == 137 && i == 5);
+
+                mob.lvMob = isSpecial ? 1 : 0;
+
+                long dame = (long) level * 31 * 50 * mob.tempId;
+                long hp = (long) level * 3107 * 50 * mob.tempId;
+
+                if (isSpecial) {
+                    dame *= 10;
+                    hp *= 10;
                 }
-            } else {
-                for (Mob mob : zone.mobs) {
-                    mob.point.dame = Util.toIntOrLong(level * 31 * 50 * mob.tempId);
-                    mob.point.maxHp = Util.toIntOrLong(level * 3107 * 50 * mob.tempId);
-                    mob.hoiSinh();
-                    mob.hoiSinhMobPhoBan();
-                }
+
+                mob.point.dame = Util.maxIntValue(dame);
+                mob.point.maxHp = Util.maxIntValue(hp);
+
+                mob.hoiSinh();
+                mob.hoiSinhMobPhoBan();
             }
 
+            // Boss riêng cho map 137
             if (zone.map.mapId == 137) {
                 try {
-                    long bossDamage = Util.toIntOrLong(200000 * level);
-                    long bossMaxHealth = Util.toIntOrLong(200000000 * level);
-                    boss = new TrungUyXanhLo(
-                            zone,
-                            level,
-                            bossDamage,
-                            bossMaxHealth);
-                } catch (Exception exception) {
+                    long bossDamage = Util.maxIntValue(200_000L * level);
+                    long bossMaxHp = Util.maxIntValue(200_000_000L * level);
+                    boss = new TrungUyXanhLo(zone, level, bossDamage, bossMaxHp);
+                } catch (Exception ignored) {
                 }
             }
         }
-        new Thread(this, "Bản Đồ Kho Báu: " + this.clan.name).start();
+        Thread.ofVirtual()
+                .name("Bản Đồ Kho Báu: " + this.clan.name)
+                .start(this);
     }
 
-    // kết thúc bản đồ kho báu
+    //kết thúc bản đồ kho báu
     public void finish() {
         for (Zone zone : zones) {
             for (int i = zone.getPlayers().size() - 1; i >= 0; i--) {
@@ -213,6 +239,7 @@ public class TreasureUnderSea implements Runnable {
     private void kickOutOfBDKB(Player player) {
         if (MapService.gI().isMapBanDoKhoBau(player.zone.map.mapId)) {
             ChangeMapService.gI().changeMapBySpaceShip(player, 5, -1, 1038);
+            sendThanhTichKhoBau(player);
         }
     }
 
