@@ -1,6 +1,13 @@
 package services.func;
 
-import DucPro.Functions;
+/*
+ *
+ *
+ *  Box ZALO:https://zalo.me/g/ifjict764
+ *  sdt zalo: 0358176187
+ * Chuyên chỉnh sữa mua bán source nro,...
+ */
+import utils.Functions;
 import java.util.HashMap;
 import java.util.Map;
 import item.Item;
@@ -9,18 +16,18 @@ import consts.ConstPlayer;
 import consts.ConstTaskBadges;
 import item.Item.ItemOption;
 import map.Zone;
-import services.NpcService;
-import player.Inventory;
-import player.Player;
-import services.Service;
+import nro.services.NpcService;
+import nro.player.Inventory;
+import nro.player.Player;
+import nro.services.Service;
 import utils.Util;
 import network.Message;
-import services.ItemService;
-import services.PlayerService;
-import services.InventoryService;
+import nro.services.ItemService;
+import nro.services.PlayerService;
+import nro.services.InventoryService;
 import utils.Logger;
 import java.util.List;
-import server.Maintenance;
+import nro.server.Maintenance;
 import task.Badges.BadgesTaskService;
 
 public class SummonDragon {
@@ -39,7 +46,8 @@ public class SummonDragon {
     public static final short NGOC_RONG_6_SAO = 19;
     public static final short NGOC_RONG_7_SAO = 20;
 
-    public static final String SUMMON_SHENRON_TUTORIAL = "Có 3 cách gọi rồng thần. Gọi từ ngọc 1 sao, gọi từ ngọc 2 sao, hoặc gọi từ ngọc 3 sao\n"
+    public static final String SUMMON_SHENRON_TUTORIAL
+            = "Có 3 cách gọi rồng thần. Gọi từ ngọc 1 sao, gọi từ ngọc 2 sao, hoặc gọi từ ngọc 3 sao\n"
             + "Các ngọc 4 sao đến 7 sao không thể gọi rồng thần được\n"
             + "Để gọi rồng 1 sao cần ngọc từ 1 sao đến 7 sao\n"
             + "Để gọi rồng 2 sao cần ngọc từ 2 sao đến 7 sao\n"
@@ -49,20 +57,23 @@ public class SummonDragon {
             + "Điều ước rồng 1 sao: Capsule 1 sao, hoặc 200 triệu sức mạnh, hoặc 20 triệu vàng, hoặc đẹp trai, hoặc....\n"
             + "Ngọc rồng sẽ mất ngay khi gọi rồng dù bạn có ước hay không\n"
             + "Quá 5 phút nếu không ước rồng thần sẽ bay mất";
-    public static final String SHENRON_SAY = "Ta sẽ ban cho người 1 điều ước, ngươi có 5 phút, hãy suy nghĩ thật kỹ trước khi quyết định";
+    public static final String SHENRON_SAY
+            = "Ta sẽ ban cho người 1 điều ước, ngươi có 5 phút, hãy suy nghĩ thật kỹ trước khi quyết định";
 
-    public static final String[] SHENRON_1_STAR_WISHES_1 = new String[] { "Giàu có \n+2 Tỏi\nVàng",
-            "Găng tay\nđang mang\nlên 1 cấp", "Chí mạng\nGốc +2%",
-            "Thay\nChiêu 2-3\nĐệ tử", "Điều ước\nkhác" };
-    public static final String[] SHENRON_1_STAR_WISHES_2 = new String[] { "Đẹp trai\nnhất\nVũ trụ",
-            "Giàu có\n+500\nNgọc", "+200 Tr\nSức mạnh\nvà tiềm\nnăng",
-            "Găng tay đệ\nđang mang\nlên 1 cấp",
-            "Điều ước\nkhác" };
-    public static final String[] SHENRON_2_STARS_WHISHES = new String[] { "Giàu có\n+70\nNgọc",
-            "+20 Tr\nSức mạnh\nvà tiềm năng", "Giàu có\n+200 Tr\nVàng" };
-    public static final String[] SHENRON_3_STARS_WHISHES = new String[] { "Giàu có\n+10\nNgọc",
-            "+2 Tr\nSức mạnh\nvà tiềm năng", "Giàu có\n+20 Tr\nVàng" };
-    // --------------------------------------------------------------------------
+    public static final String[] SHENRON_1_STAR_WISHES_1
+            = new String[]{"Giàu có\n+2 Tỏi\nVàng", "Găng tay\nđang mang\nlên 1 cấp", "Chí mạng\nGốc +2%",
+                "Thay\nChiêu 2-3\nĐệ tử", "Điều ước\nkhác"};
+    public static final String[] SHENRON_1_STAR_WISHES_2
+            = new String[]{"Đẹp trai\nnhất\nVũ trụ", "Giàu có\n+10K\nNgọc", "+200 Tr\nSức mạnh\nvà tiềm\nnăng",
+                "Găng tay đệ\nđang mang\nlên 1 cấp",
+                "Điều ước\nkhác"};
+    public static final String[] SHENRON_1_STAR_WISHES_3
+            = new String[]{"3 Trứng\nrồng nhí", "Điều ước\nkhác"};
+    public static final String[] SHENRON_2_STARS_WHISHES
+            = new String[]{"Giàu có\n+2K\nNgọc", "+20 Tr\nSức mạnh\nvà tiềm năng", "Giàu có\n+200 Tr\nVàng"};
+    public static final String[] SHENRON_3_STARS_WHISHES
+            = new String[]{"Giàu có\n+200\nNgọc", "+2 Tr\nSức mạnh\nvà tiềm năng", "Giàu có\n+20 Tr\nVàng"};
+    //--------------------------------------------------------------------------
     private static SummonDragon instance;
     private final Map pl_dragonStar;
     private long lastTimeShenronAppeared;
@@ -84,7 +95,7 @@ public class SummonDragon {
 
     private SummonDragon() {
         this.pl_dragonStar = new HashMap<>();
-        this.update = new Thread(() -> {
+        this.update = Thread.ofVirtual().unstarted(() -> {
             while (active && !Maintenance.isRunning) {
                 try {
                     if (isShenronAppear) {
@@ -98,25 +109,29 @@ public class SummonDragon {
                                     break;
                                 }
                             }
-
                         }
+
                         if (Util.canDoWithTime(lastTimeShenronWait, timeShenronWait)) {
                             shenronLeave(playerSummonShenron, TIME_UP);
                         }
                     }
+
                     Functions.sleep(1000);
                 } catch (Exception e) {
                     Logger.logException(SummonDragon.class, e);
                 }
             }
         });
+
         this.active();
     }
 
     private void active() {
         if (!active) {
             active = true;
-            this.update.start();
+            if (!update.isAlive()) {
+                update.start();
+            }
         }
     }
 
@@ -141,8 +156,8 @@ public class SummonDragon {
                     return;
                 }
 
-                if (Util.canDoWithTime(lastTimeShenronAppeared, timeResummonShenron) || pl.isAdmin()) {
-                    // gọi rồng
+                if (Util.canDoWithTime(lastTimeShenronAppeared, timeResummonShenron)) {
+                    //gọi rồng
                     playerSummonShenron = pl;
                     playerSummonShenronId = (int) pl.id;
                     mapShenronAppear = pl.zone;
@@ -167,10 +182,8 @@ public class SummonDragon {
                     activeShenron(pl, true, SummonDragon.DRAGON_SHENRON);
                     sendWhishesShenron(pl);
                 } else {
-                    int timeLeft = (int) ((timeResummonShenron - (System.currentTimeMillis() - lastTimeShenronAppeared))
-                            / 1000);
-                    Service.gI().sendThongBao(pl, "Vui lòng đợi "
-                            + (timeLeft < 7200 ? timeLeft + " giây" : timeLeft / 60 + " phút") + " nữa");
+                    int timeLeft = (int) ((timeResummonShenron - (System.currentTimeMillis() - lastTimeShenronAppeared)) / 1000);
+                    Service.gI().sendThongBao(pl, "Vui lòng đợi " + (timeLeft < 7200 ? timeLeft + " giây" : timeLeft / 60 + " phút") + " nữa");
                 }
             }
         } else {
@@ -214,7 +227,7 @@ public class SummonDragon {
                 msg.writer().writeShort(pl.zone.map.bgId);
                 msg.writer().writeByte(pl.zone.zoneId);
                 msg.writer().writeInt((int) pl.id);
-                msg.writer().writeUTF("DucPro");
+                msg.writer().writeUTF("BARCOLLxENZEEFXNRO");
                 msg.writer().writeShort(pl.location.x);
                 msg.writer().writeShort(pl.location.y);
                 msg.writer().writeByte(type);
@@ -283,12 +296,12 @@ public class SummonDragon {
             case ConstNpc.SHENRON_1_1:
                 switch (this.select) {
 
-                    case 0: // 20 tr vàng
+                    case 0: //20 tr vàng
                         this.playerSummonShenron.inventory.gold += 2000000000;
                         PlayerService.gI().sendInfoHpMpMoney(this.playerSummonShenron);
                         BadgesTaskService.updateCountBagesTask(playerSummonShenron, ConstTaskBadges.TRUM_UOC_RONG, 1);
                         break;
-                    case 1: // găng tay đang đeo lên 1 cấp
+                    case 1: //găng tay đang đeo lên 1 cấp
                         Item item = this.playerSummonShenron.inventory.itemsBody.get(2);
                         if (item.isNotNullItem()) {
                             int level = 0;
@@ -324,18 +337,17 @@ public class SummonDragon {
                         }
                         BadgesTaskService.updateCountBagesTask(playerSummonShenron, ConstTaskBadges.TRUM_UOC_RONG, 1);
                         break;
-                    case 2: // chí mạng +2%
+                    case 2: //chí mạng +2%
                         if (this.playerSummonShenron.nPoint.critg < 9) {
                             this.playerSummonShenron.nPoint.critg += 2;
                         } else {
-                            Service.gI().sendThongBao(playerSummonShenron,
-                                    "Điều ước này đã quá sức với ta, ta sẽ cho ngươi chọn lại");
+                            Service.gI().sendThongBao(playerSummonShenron, "Điều ước này đã quá sức với ta, ta sẽ cho ngươi chọn lại");
                             reOpenShenronWishes(playerSummonShenron);
                             return;
                         }
                         BadgesTaskService.updateCountBagesTask(playerSummonShenron, ConstTaskBadges.TRUM_UOC_RONG, 1);
                         break;
-                    case 3: // thay chiêu 2-3 đệ tử
+                    case 3: //thay chiêu 2-3 đệ tử
                         if (playerSummonShenron.pet != null) {
                             if (playerSummonShenron.pet.playerSkill.skills.get(1).skillId != -1) {
                                 playerSummonShenron.pet.openSkill2();
@@ -343,8 +355,7 @@ public class SummonDragon {
                                     playerSummonShenron.pet.openSkill3();
                                 }
                             } else {
-                                Service.gI().sendThongBao(playerSummonShenron,
-                                        "Ít nhất đệ tử ngươi phải có chiêu 2 chứ!");
+                                Service.gI().sendThongBao(playerSummonShenron, "Ít nhất đệ tử ngươi phải có chiêu 2 chứ!");
                                 reOpenShenronWishes(playerSummonShenron);
                                 return;
                             }
@@ -360,7 +371,7 @@ public class SummonDragon {
                 break;
             case ConstNpc.SHENRON_1_2:
                 switch (this.select) {
-                    case 0: // đẹp trai nhất vũ trụ
+                    case 0: //đẹp trai nhất vũ trụ
                         if (InventoryService.gI().getCountEmptyBag(playerSummonShenron) > 0) {
                             byte gender = this.playerSummonShenron.gender;
                             Item avtVip = ItemService.gI().createNewItem((short) (gender == ConstPlayer.TRAI_DAT ? 227
@@ -376,23 +387,22 @@ public class SummonDragon {
                         }
                         BadgesTaskService.updateCountBagesTask(playerSummonShenron, ConstTaskBadges.TRUM_UOC_RONG, 1);
                         break;
-                    case 1: // +1,5 ngọc
-                        this.playerSummonShenron.inventory.gem += 500;
+                    case 1: //+1,5 ngọc
+                        this.playerSummonShenron.inventory.gem += 10000;
                         PlayerService.gI().sendInfoHpMpMoney(this.playerSummonShenron);
                         BadgesTaskService.updateCountBagesTask(playerSummonShenron, ConstTaskBadges.TRUM_UOC_RONG, 1);
                         break;
-                    case 2: // +200 tr smtn
+                    case 2: //+200 tr smtn
                         if (this.playerSummonShenron.nPoint.power <= 20000000000L) {
                             Service.gI().addSMTN(this.playerSummonShenron, (byte) 2, 200000000, false);
                         } else {
-                            Service.gI().sendThongBao(playerSummonShenron,
-                                    "Xin lỗi, điều ước này khó quá, ta không thể thực hiện.");
+                            Service.gI().sendThongBao(playerSummonShenron, "Xin lỗi, điều ước này khó quá, ta không thể thực hiện.");
                             reOpenShenronWishes(playerSummonShenron);
                             return;
                         }
                         BadgesTaskService.updateCountBagesTask(playerSummonShenron, ConstTaskBadges.TRUM_UOC_RONG, 1);
                         break;
-                    case 3: // găng tay đệ lên 1 cấp
+                    case 3: //găng tay đệ lên 1 cấp
                         if (this.playerSummonShenron.pet != null) {
                             Item item = this.playerSummonShenron.pet.inventory.itemsBody.get(2);
                             if (item.isNotNullItem()) {
@@ -418,8 +428,7 @@ public class SummonDragon {
                                     }
                                     Service.gI().point(playerSummonShenron);
                                 } else {
-                                    Service.gI().sendThongBao(playerSummonShenron,
-                                            "Găng tay của đệ ngươi đã đạt cấp tối đa");
+                                    Service.gI().sendThongBao(playerSummonShenron, "Găng tay của đệ ngươi đã đạt cấp tối đa");
                                     reOpenShenronWishes(playerSummonShenron);
                                     return;
                                 }
@@ -437,32 +446,49 @@ public class SummonDragon {
                         break;
                 }
                 break;
+            case ConstNpc.SHENRON_1_3:
+                switch (this.select) {
+                    case 0:
+                        Item trungRong = ItemService.gI().createNewItem((short) 1785);
+                        InventoryService.gI().addItemBag(playerSummonShenron, trungRong);
+                        InventoryService.gI().sendItemBag(playerSummonShenron);
+                        break;
+                }
+                break;    
             case ConstNpc.SHENRON_2:
                 switch (this.select) {
-                    case 0: // +150 ngọc
-                        this.playerSummonShenron.inventory.gem += 70;
+                    case 0: //+150 ngọc
+                        this.playerSummonShenron.inventory.gem += 2000;
                         PlayerService.gI().sendInfoHpMpMoney(this.playerSummonShenron);
                         break;
-                    case 1: // +20 tr smtn
+                    case 1: //+20 tr smtn
                         Service.gI().addSMTN(this.playerSummonShenron, (byte) 2, 20000000, false);
                         break;
-                    case 2: // 2 tr vàng
-                        this.playerSummonShenron.inventory.gold += 200_000_000;
+                    case 2: //2 tr vàng
+                        if (this.playerSummonShenron.inventory.gold > 1800000000) {
+                            this.playerSummonShenron.inventory.gold = Inventory.LIMIT_GOLD;
+                        } else {
+                            this.playerSummonShenron.inventory.gold += 200000000;
+                        }
                         PlayerService.gI().sendInfoHpMpMoney(this.playerSummonShenron);
                         break;
                 }
                 break;
             case ConstNpc.SHENRON_3:
                 switch (this.select) {
-                    case 0: // +15 ngọc
-                        this.playerSummonShenron.inventory.gem += 10;
+                    case 0: //+15 ngọc
+                        this.playerSummonShenron.inventory.gem += 200;
                         PlayerService.gI().sendInfoHpMpMoney(this.playerSummonShenron);
                         break;
-                    case 1: // +2 tr smtn
+                    case 1: //+2 tr smtn
                         Service.gI().addSMTN(this.playerSummonShenron, (byte) 2, 2000000, false);
                         break;
-                    case 2: // 200k vàng
-                        this.playerSummonShenron.inventory.gold += 20_000_000;
+                    case 2: //200k vàng
+                        if (this.playerSummonShenron.inventory.gold > (2000000000 - 20000000)) {
+                            this.playerSummonShenron.inventory.gold = Inventory.LIMIT_GOLD;
+                        } else {
+                            this.playerSummonShenron.inventory.gold += 20000000;
+                        }
                         PlayerService.gI().sendInfoHpMpMoney(this.playerSummonShenron);
                         break;
                 }
@@ -482,6 +508,9 @@ public class SummonDragon {
             case ConstNpc.SHENRON_1_2:
                 wish = SHENRON_1_STAR_WISHES_2[select];
                 break;
+            case ConstNpc.SHENRON_1_3:
+                wish = SHENRON_1_STAR_WISHES_3[select];
+                break;    
             case ConstNpc.SHENRON_2:
                 wish = SHENRON_2_STARS_WHISHES[select];
                 break;
@@ -500,6 +529,9 @@ public class SummonDragon {
             case ConstNpc.SHENRON_1_2:
                 NpcService.gI().createMenuRongThieng(pl, ConstNpc.SHENRON_1_2, SHENRON_SAY, SHENRON_1_STAR_WISHES_2);
                 break;
+            case ConstNpc.SHENRON_1_3:
+                NpcService.gI().createMenuRongThieng(pl, ConstNpc.SHENRON_1_3, SHENRON_SAY, SHENRON_1_STAR_WISHES_3);
+                break;    
             case ConstNpc.SHENRON_2:
                 NpcService.gI().createMenuRongThieng(pl, ConstNpc.SHENRON_2, SHENRON_SAY, SHENRON_2_STARS_WHISHES);
                 break;
@@ -511,11 +543,9 @@ public class SummonDragon {
 
     public void shenronLeave(Player pl, byte type) {
         if (type == WISHED) {
-            NpcService.gI().createTutorial(pl, 0,
-                    "Điều ước của ngươi đã trở thành sự thật\nHẹn gặp ngươi lần sau, ta đi ngủ đây, bái bai");
+            NpcService.gI().createTutorial(pl, 0, "Điều ước của ngươi đã trở thành sự thật\nHẹn gặp ngươi lần sau, ta đi ngủ đây, bái bai");
         } else {
-            NpcService.gI().createMenuRongThieng(pl, ConstNpc.IGNORE_MENU,
-                    "Ta buồn ngủ quá rồi\nHẹn gặp ngươi lần sau, ta đi đây, bái bai");
+            NpcService.gI().createMenuRongThieng(pl, ConstNpc.IGNORE_MENU, "Ta buồn ngủ quá rồi\nHẹn gặp ngươi lần sau, ta đi đây, bái bai");
         }
         activeShenron(pl, false, SummonDragon.DRAGON_SHENRON);
         this.isShenronAppear = false;
